--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,8 @@
 ignoredBuiltDependencies:
+  - '@prisma/engines'
+  - prisma
   - sharp
   - unrs-resolver
+
+onlyBuiltDependencies:
+  - better-sqlite3
