--- a/package.json
+++ b/package.json
@@ -1,60 +1,16 @@
 {
   "name": "opendata",
   "description": "An implementation of ADD's Open Data platform datasets. Built and maintained by Avycenna.",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "migrate": "prisma migrate dev",
-    "migrate:name": "prisma migrate dev --name",
-    "generate": "prisma generate",
-    "studio": "prisma studio"
+    "dev": "pnpm -r dev",
+    "build": "pnpm -r build",
+    "start": "pnpm -r start",
+    "lint": "pnpm -r lint"
   },
-  "dependencies": {
-    "@base-ui/react": "^1.1.0",
-    "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-better-sqlite3": "^7.3.0",
-    "@prisma/client": "^7.3.0",
-    "better-sqlite3": "^12.6.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "dotenv": "^17.2.3",
-    "embla-carousel-react": "^8.6.0",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.563.0",
-    "maplibre-gl": "^5.17.0",
-    "next": "16.1.5",
-    "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.3",
-    "react": "19.2.3",
-    "react-day-picker": "^9.13.0",
-    "react-dom": "19.2.3",
-    "react-hook-form": "^7.71.1",
-    "recharts": "2.15.4",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5",
-    "vaul": "^1.1.2",
-    "zod": "^4.3.6"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "25.1.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.5",
-    "prisma": "^7.3.0",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0"
-  }
+  "keywords": [],
+  "author": "",
+  "packageManager": "pnpm@10.27.0"
 }
