--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,3 @@
-ignoredBuiltDependencies:
-  - '@prisma/engines'
-  - prisma
-  - sharp
-  - unrs-resolver
-
-onlyBuiltDependencies:
-  - better-sqlite3
+packages:
+  - "apps/*"
+  - "packages/*"
